crates/rpkl-runtime/tests/snapshots/snapshot_tests__abstract_class.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 1883
expression: eval_pkl(source)
---
{
  "c": {
    "name": "Circle",
    "radius": 5.0
  }
}
