crates/rpkl-runtime/tests/snapshots/snapshot_tests__amends_inherited_property_refs_child_values.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl_file(&path)
---
{
  "package": {
    "name": "test-package",
    "version": "1.2.3"
  },
  "output": {
    "pkg_name": "test-package",
    "pkg_version": "1.2.3"
  }
}
