crates/rpkl-runtime/tests/snapshots/snapshot_tests__amends_nested_objects.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl_file(&path)
---
{
  "name": "production",
  "version": "1.0.0",
  "port": 443,
  "debug": false,
  "database": {
    "host": "prod-db.cluster.amazonaws.com",
    "port": 5432,
    "maxConnections": 100
  }
}
