crates/rpkl-runtime/tests/snapshots/snapshot_tests__amends_typed_null_property.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl_file(&path)
---
{
  "about": {
    "homepage": null,
    "license": "MIT",
    "summary": "A test package"
  },
  "output": {
    "has_about": true,
    "about_homepage": null,
    "about_license": "MIT"
  }
}
