crates/rpkl-runtime/tests/snapshots/snapshot_tests__annotation_on_class.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2405
expression: eval_pkl_result(source)
---
{
  "obj": {
    "value": 42
  }
}
