crates/rpkl-runtime/tests/snapshots/snapshot_tests__as_compatible_types.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "int_val": 42,
  "string_val": "hello",
  "int_as_int": 42,
  "string_as_string": "hello",
  "int_as_any": 42
}
