crates/rpkl-runtime/tests/snapshots/snapshot_tests__as_constraint_failure.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl_result(source)
---
Eval error: Type cast failed: cannot cast Int to Int(...)
