crates/rpkl-runtime/tests/snapshots/snapshot_tests__as_constraint_success.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "positive": 42
}
